# tempcode

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  REWRITE_RnD.md  class_diagram_apps.txt  documentation.md  feature.txt  gulpfile.js  layout.md  manage.py  new-requirements.md  package-lock.json  package.json  pivot.md  pyproject.toml  requirements.txt  roadmap.md  v2.md
apps/accounts/: __init__.py  admin.py
apps/blocks/: __init__.py  admin.py  apps.py  base.py  builtins.py  configs.py  controller.py  documentation.md  dummy_ready_callable.py  dummy_ready_module.py  feature.txt  forms.py  policy.py  register.py  registry.py  signals.py  specs.py  test_appconfig.py  test_cases.txt  test_filter_fields_template.py  test_filter_utils.py  tests.py  urls.py  views.py
apps/blocks_demo/: __init__.py  admin.py  apps.py  initialization.py  models.py  tests.py  views.py
apps/common/: __init__.py  admin.py  admin_mixins.py  apps.py  context_processors.py  documentation.md  feature.txt  fx.py  urls.py
apps/django_bi/: admin.py  apps.py
apps/frms/: __init__.py  admin.py  apps.py  filters.py  urls.py
apps/it/: apps.py
apps/layout/: __init__.py  admin.py  apps.py  changes.md  constants.py  documentation.md  filter_registry.py  forms.py  mixins.py  models.py  redesign.txt  signals.py  suggestions.txt  urls.py  views.py
apps/permissions/: apps.py  checks.py  documentation.md  middleware.py  tests.py  utils.py  views.py
apps/planning/: __init__.py  apps.py  blocks.py  blocks_registry.py  feature.txt  tests.py
apps/policy/: __init__.py  service.py
apps/production/: __init__.py  apps.py  blocks.py  blocks_registry.py  charts.py  test_blocks.py  test_charts.py  tests.py  urls.py
apps/purchase/: __init__.py  apps.py  blocks.py  blocks_registry.py  charts.py  feature.txt  tests.py
apps/workflow/: admin.py  apply_transition.py  apps.py  documentation.md  frontend.py  permissions.py  urls.py  utils.py
apps_v2/: __init__.py
apps_v2/blocks/: configs.py  (+7 more)
django_bi/: __init__.py  admin.py  apps.py  conf.py
docs/: CHANGELOG.md  blocks.md  permissions.md
mag360/: asgi.py  settings.py  settings_test.py  test_settings.py  urls.py  wsgi.py
scripts/: inspect_classes.py
(+735 files in other folders)
